--- a/help/release-notes/2020/may-2020.md
+++ b/help/release-notes/2020/may-2020.md
@@ -28,28 +28,28 @@ Aktualisierungen vorhandener Funktionen in Adobe Experience Platform:
 
 ## Aktualisierungen der Benutzeroberfläche {#ux}
 
-Adobe Experience Platform is releasing updates to the domain and header bar to improve your experience and unify with other [!DNL Experience Cloud] applications.
+Adobe Experience Platform veröffentlicht Updates für die Domäne und Kopfzeilenleiste, um Ihr Erlebnis zu verbessern und andere [!DNL Experience Cloud]-Anwendungen zu vereinen.
 
 - Einfacherer Wechsel zwischen Ihren Organisationen oder zu einer anderen Anwendung
 - Verbessertes Handbuch, einschließlich spezieller Artikel und kontextbezogener Dokumentationen im Hilfemenü
-- Ability to give feedback about the [!DNL Experience Platform] and file support tickets
+- Möglichkeit, Feedback zu den [!DNL Experience Platform]- und Datei-Support-Tickets zu geben
 
-Die Einführung des neuen Erlebnisses erfolgt schrittweise. Sie können das Erlebnis unter [https://experience.adobe.com/platform](https://experience.adobe.com/platform)Ansicht haben.
+Die Einführung des neuen Erlebnisses erfolgt schrittweise. Sie können das Erlebnis unter [https://experience.adobe.com/platform](https://experience.adobe.com/platform) Ansicht haben.
 
 ## [!DNL Data Science Workspace] {#dsw}
 
-[!DNL Data Science Workspace] nutzt maschinelles Lernen und künstliche Intelligenz, um Erkenntnisse aus Ihren Daten zu entfesseln. Integrated into Adobe Experience Platform, [!DNL Data Science Workspace] helps you make predictions using your content and data assets across Adobe solutions. Eine der Möglichkeiten [!DNL Data Science Workspace] dafür ist der Einsatz von [!DNL JupyterLab]. [!DNL JupyterLab] ist eine Web-basierte Benutzeroberfläche für [[!DNL Project Jupyter]](https://jupyter.org/) und ist eng in Adobe Experience Platform integriert. It provides an interactive development environment for data scientists to work with [!DNL Jupyter] notebooks, code, and data.
+[!DNL Data Science Workspace] nutzt maschinelles Lernen und künstliche Intelligenz, um Erkenntnisse aus Ihren Daten zu entfesseln. In Adobe Experience Platform integriert hilft [!DNL Data Science Workspace] Ihnen bei der Erstellung von Prognosen mit Ihren Inhalten und Daten-Assets in allen Adoben. Eine der Möglichkeiten für [!DNL Data Science Workspace] ist die Verwendung von [!DNL JupyterLab]. [!DNL JupyterLab] ist eine Web-basierte Benutzeroberfläche für [[!DNL Project Jupyter]](https://jupyter.org/) und ist eng in Adobe Experience Platform integriert. Es bietet eine interaktive Entwicklungs-Umgebung für Datenwissenschaftler, mit [!DNL Jupyter]-Notebooks, -Code und -Daten zu arbeiten.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 |--- | ---|
-| [!DNL JupyterLab Launcher] | Das [!DNL JupyterLab Launcher] enthält nun Starter für [!DNL Spark] 2,4 Notebooks. [!DNL Spark] 2.3 Notebook-Starter werden nun als veraltet markiert und in einer späteren Version entfernt. |
+| [!DNL JupyterLab Launcher] | Das [!DNL JupyterLab Launcher] enthält jetzt Starter für [!DNL Spark] 2.4 Notebooks. [!DNL Spark] 2.3 Notebook-Starter werden nun als veraltet markiert und in einer späteren Version entfernt. |
 | [!DNL Spark] 2.4 | Neue Scala- ([!DNL Spark]) und PySpark-Rezepte verwenden jetzt [!DNL Spark] 2.4. |
-| Kernels | Scala ([!DNL Spark]) Notebooks werden jetzt über den Scala Kernel verfasst. PySpark Notebooks werden jetzt über den [!DNL Python] Kernel verfasst. Der Kernel [!DNL Spark] und der PySpark sind veraltet und sollen in einer folgenden Version entfernt werden. |
-| Rezepte | Neue PySpark- und [!DNL Spark] Rezepte folgen jetzt dem [!DNL Docker] Arbeitsablauf ähnlich wie [!DNL Python] und R-Rezepte. |
+| Kernels | Scala-Notebooks ([!DNL Spark]) werden jetzt über den Scala-Kernel verfasst. PySpark Notebooks werden jetzt über den [!DNL Python] Kernel verfasst. Der [!DNL Spark]- und PySpark-Kernel sind veraltet und sollen in einer folgenden Version entfernt werden. |
+| Rezepte | Neue PySpark- und [!DNL Spark]-Rezepte folgen nun dem [!DNL Docker]-Arbeitsablauf ähnlich den Rezepten [!DNL Python] und R. |
 
-Weitere Informationen zur Migration Ihrer Notebooks und Rezepte auf [!DNL Spark] 2.4 finden Sie im Handbuch [für den Datenzugriff](../../data-science-workspace/jupyterlab/access-notebook-data.md)auf Notebooks. Weitere allgemeine Informationen zum Data Science Workspace finden Sie in der [Übersichtsdokumentation](../../data-science-workspace/home.md).
+Weitere Informationen zur Migration Ihrer Notebooks und Rezepte auf [!DNL Spark] 2.4 finden Sie im Handbuch [Notebook-Datenzugriff](../../data-science-workspace/jupyterlab/access-notebook-data.md). Allgemeine Informationen zum Data Science Workspace finden Sie in der [Übersichtsdokumentation](../../data-science-workspace/home.md).
 
 ## [!DNL Destinations] {#destinations}
 
@@ -57,59 +57,59 @@ In der [ Echtzeit-Kundendatenplattform](../../rtcdp/overview.md) sind Ziele vord
 
 **[!DNL Facebook]**
 
-Echtzeit-CDP unterstützt jetzt die Aktivierung von Daten zu [!DNL Facebook]und ermöglicht Ihnen die Aktivierung von Profilen für Ihre [!DNL Facebook] Kampagnen für Targeting, Personalisierung und Unterdrückung von Audiencen auf Basis von Hash-E-Mails.
+Echtzeit-CDP unterstützt jetzt die Aktivierung von Daten auf [!DNL Facebook], sodass Sie Profil für Ihre [!DNL Facebook]-Kampagnen aktivieren können, um Audiencen-Targeting, Personalisierung und Unterdrückung auf Basis von Hash-E-Mails zu ermöglichen.
 
-Weitere Informationen zu den neuen Funktionen finden Sie auf der [Facebook-Zielseite](../../destinations/catalog/social/facebook.md) .
+Weitere Informationen zur neuen Funktion finden Sie auf der Seite [Facebook-Ziel](../../destinations/catalog/social/facebook.md).
 
-**[!DNL Amazon Kinesis]und [!DNL Azure Event Hubs] Streaming Cloud-Datenspeicherung**
+**[!DNL Amazon Kinesis]und  [!DNL Azure Event Hubs] Streaming Cloud-Datenspeicherung**
 
 Echtzeit-CDP unterstützt jetzt die Aktivierung von Daten in Streaming-Cloud-Datenspeicherung-Ziele, sodass Sie Audiencen- und Ereignisse im JSON-Format an diese Ziele exportieren können. Anschließend können Sie die Geschäftslogik über diesen Ereignissen in Ihren Zielen beschreiben. Weitere Informationen finden Sie hier:
 
 >[!NOTE]
 >
->Die [!DNL Amazon Kinesis] und [!DNL Azure Event Hubs] Ziele in Echtzeit-CDP befinden sich derzeit in der Betaphase. Die Dokumentation und Funktionalität können sich ändern.
+>Die Ziele [!DNL Amazon Kinesis] und [!DNL Azure Event Hubs] in der Echtzeit-CDP befinden sich derzeit in der Betaphase. Die Dokumentation und Funktionalität können sich ändern.
 
 | Dokumentation | Beschreibung |
 |--- | ---|
-| [(Beta) Amazon Kinesis-Ziel](../../destinations/catalog/cloud-storage/amazon-kinesis.md) | In diesem Artikel wird beschrieben, wie Sie eine ausgehende Echtzeitverbindung zu Ihrer [!DNL Amazon Kinesis] Datenspeicherung erstellen, um Daten von Adobe Experience Platform zu streamen. |
-| [(Beta) Azurblauer Ereignis Hubs-Ziel](../../destinations/catalog/cloud-storage/azure-event-hubs.md) | In diesem Artikel wird beschrieben, wie Sie eine ausgehende Echtzeitverbindung zu Ihrer [!DNL Azure Event Hubs] Datenspeicherung erstellen, um Daten von Adobe Experience Platform zu streamen. |
-| [API-Lernprogramm - Verbindungen zu Streaming-Zielen herstellen und Daten aktivieren](../../destinations/api/streaming-destinations.md) | This tutorial demonstrates how to use API calls to connect to your Adobe Experience Platform data, create a connection to a streaming cloud storage destination ([!DNL Amazon Kinesis] or [!DNL Azure Event Hubs]), create a dataflow to your new created destination, and activate data to your new created destination. |
+| [(Beta) Amazon Kinesis-Ziel](../../destinations/catalog/cloud-storage/amazon-kinesis.md) | In diesem Artikel wird beschrieben, wie Sie eine ausgehende Echtzeitverbindung zu Ihrer [!DNL Amazon Kinesis]-Datenspeicherung erstellen, um Daten von Adobe Experience Platform zu streamen. |
+| [(Beta) Azurblauer Ereignis Hubs-Ziel](../../destinations/catalog/cloud-storage/azure-event-hubs.md) | In diesem Artikel wird beschrieben, wie Sie eine ausgehende Echtzeitverbindung zu Ihrer [!DNL Azure Event Hubs]-Datenspeicherung erstellen, um Daten von Adobe Experience Platform zu streamen. |
+| [API-Lernprogramm - Verbindungen zu Streaming-Zielen herstellen und Daten aktivieren](../../destinations/api/streaming-destinations.md) | Dieses Lernprogramm zeigt, wie Sie mit API-Aufrufen eine Verbindung zu Ihren Adobe Experience Platform-Daten herstellen, eine Verbindung zu einem Streaming Cloud-Datenspeicherung-Ziel ([!DNL Amazon Kinesis] oder [!DNL Azure Event Hubs]) herstellen, einen Datenfluss zu Ihrem neu erstellten Ziel erstellen und Daten an das neu erstellte Ziel aktivieren können. |
 
 Weiterführende Informationen finden Sie in der [Übersicht zu Zielen](../../destinations/home.md).
 
 ## [!DNL Experience Platform Web SDK] und [!DNL Experience Platform Edge Network] {#edge}
 
-Das [!DNL Experience Platform Web SDK] und [!DNL Experience Platform Edge Network] ermöglichen Benutzern das Senden von Daten an Adobe Experience Platform und andere Adobe Solutions in Echtzeit für Endbenutzergeräte und Browser. Die aktuellste Liste der Anwendungsfälle finden Sie in unserem häufig aktualisierten [Fahrplan](https://github.com/adobe/alloy/projects/5) .
+Mit den Befehlen [!DNL Experience Platform Web SDK] und [!DNL Experience Platform Edge Network] können Benutzer Daten an Adobe Experience Platform und andere Adobe Solutions in Echtzeit für Endbenutzergeräte und Browser senden. Die aktuellste Liste von Anwendungsfällen finden Sie in unserem [öffentlichen Fahrplan](https://github.com/adobe/alloy/projects/5), der häufig aktualisiert wird.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 |--- | ---|
 | ECID-Unterstützung | Das SDK unterstützt standardmäßig ECID ohne zusätzliche Bibliotheken oder zu installierende Informationen. |
-| Konfigurationsoberfläche | Verwalten Sie Ihre Konfigurations-ID-Einstellungen mit der neuen Benutzeroberfläche für die Edge-Konfiguration in [!DNL Launch], müssen Sie sich auf der Zulassungsliste befinden, um Zugriff zu erhalten. |
-| Adobe Experience Platform Web SDK Mixin | Ein Mixin, das alle unterstützten Felder [!DNL Experience Platform web SDK] umfasst. |
-| Einwilligungseinstellungen des Kurses | Bietet Firmen Kontrolle über die Teilnahme und die Abmeldung von [!DNL Experience Platform Web SDK]Anmeldedaten. |
-| Clientseitige Debugging-Unterstützung in der neuen [!DNL Experience Cloud Debugger Extension] | Sehen Sie sich Anforderungen von [!DNL Experience Platform web SDK] sowie Edge Traces an, um zu sehen, wie Daten durch das System fließen. |
+| Konfigurationsoberfläche | Verwalten Sie Ihre Konfigurations-ID-Einstellungen mit der neuen Benutzeroberfläche für die Edge-Konfiguration in [!DNL Launch]. Sie müssen sich auf der Zulassungsliste befinden, um Zugriff zu erhalten. |
+| Adobe Experience Platform Web SDK Mixin | Eine Mischung, die mit dem [!DNL Experience Platform web SDK] verwendet wird und alle unterstützten Felder umfasst. |
+| Einwilligungseinstellungen des Kurses | Gibt Firmen die Kontrolle über die Teilnahme und Abmeldung von [!DNL Experience Platform Web SDK]. |
+| Clientseitige Debugging-Unterstützung im neuen [!DNL Experience Cloud Debugger Extension] | Sehen Sie sich Anforderungen von [!DNL Experience Platform web SDK] sowie Edge Traces an, um zu sehen, wie Daten durch das System fließen. |
 | Adobe Analytics | Senden Sie Daten über die Edge-Konfiguration an [!DNL Analytics] Report Suites. XDM wird in Kontextdaten reduziert und unterstützt Multi-Suite-Tagging. |
 | Adobe Target | Unterstützung für Adobe Target. Einschließlich VEC, Form-Based Composer, A/B, XT, Automated Personalization, MVT. |
-| Adobe Audience Manager Support | Unterstützung für [!DNL Audience Manager] ID-Synchronisierungen, URL-Ziele und Cookie-Ziele. |
-| Identitätssynchronisierung | Umbenannt `setCustomersIds` in `syncIdentity` klarer zu gestalten. |
+| Adobe Audience Manager Support | Unterstützung für ID-Syncs, URL-Ziele und Cookie-Ziele.[!DNL Audience Manager] |
+| Identitätssynchronisierung | Umbenannt in `setCustomersIds` in `syncIdentity`, um es klarer zu gestalten. |
 | XDM Object Builder | In der Starterweiterung können Sie jetzt XDM-Objekte als Datenelemente erstellen. |
 
-For more information on [!DNL Platform Web SDK] and [!DNL Edge Network], refer to the [documentation](../../edge/home.md).
+Weitere Informationen zu [!DNL Platform Web SDK] und [!DNL Edge Network] finden Sie in der [Dokumentation](../../edge/home.md).
 
 ## [!DNL Real-time Customer Profile] {#profile}
 
-Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. With [!DNL Real-time Customer Profile], you can see a holistic view of each individual customer that combines data from multiple channels, including online, offline, CRM, and third party data. [!DNL Profile] ermöglicht es Ihnen, Ihre unterschiedlichen Kundendaten zu einer einheitlichen Ansicht zusammenzuführen, die Ihnen einen umsetzbaren Zeitstempel für jede Kundeninteraktion bietet.
+Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsistenter und relevanter Erlebnisse für Kunden, unabhängig davon, wo und wann diese mit Ihrer Marke interagieren. Mit [!DNL Real-time Customer Profile] können Sie eine ganzheitliche Ansicht jedes einzelnen Kunden sehen, die Daten aus mehreren Kanälen, einschließlich Online-, Offline-, CRM- und Drittanbieterdaten, kombiniert. [!DNL Profile] ermöglicht es Ihnen, Ihre unterschiedlichen Kundendaten zu einer einheitlichen Ansicht zusammenzuführen, die Ihnen einen umsetzbaren Zeitstempel für jede Kundeninteraktion bietet.
 
 **Neue Funktionen**
 
 | Funktion | Beschreibung |
 | -----------| ---------- |
 | Neue Profil-Exportmetriken | Es wurden Metriken zu Exportaufträgen für Profile hinzugefügt, die die Gesamtzahl der exportierten Profil und die Anzahl der Profil in jedem Namensraum anzeigen. |
-| Neue Metriken zur Beobachtbarkeit | Die Insight-API für die Observability Insights-Funktion verfügt jetzt über die folgenden Metriken für die Streaming-Erfassung in [!DNL Profile]: Eingehende Anforderungsrate, Erfolgreiche Ingestion-Rate, Aufgenommene Datensatzgröße. |
-| Massenendpunkt des GET | Der [!DNL Real-time Customer Profile] API wurde ein Massen-GET-Endpunkt hinzugefügt, um das Abrufen mehrerer Ergebnisse in einem einzigen API-Aufruf zu ermöglichen. Für Segmentdefinitionen, Segmentaufträge und Zusammenführungsrichtlinien können Sie jetzt GET bis zu 100 IDs stapeln. |
-| Profil nach Identität durchsuchen | In der [!DNL Platform] Benutzeroberfläche können Sie jetzt einen Identitäts-Namensraum auswählen und einen Identitätswert angeben, um ein Profil zu durchsuchen. |
+| Neue Metriken zur Beobachtbarkeit | Observability Insights API verfügt jetzt über die folgenden Metriken für die Streaming-Erfassung nach [!DNL Profile]: Eingehende Anforderungsrate, Erfolgreiche Ingestion-Rate, Aufgenommene Datensatzgröße. |
+| Massenendpunkt des GET | Der API [!DNL Real-time Customer Profile] wurde ein Massen-GET-Endpunkt hinzugefügt, um das Abrufen mehrerer Ergebnisse in einem einzigen API-Aufruf zu ermöglichen. Für Segmentdefinitionen, Segmentaufträge und Zusammenführungsrichtlinien können Sie jetzt GET bis zu 100 IDs stapeln. |
+| Profil nach Identität durchsuchen | In der Benutzeroberfläche [!DNL Platform] können Sie jetzt einen Identitäts-Namensraum auswählen und einen Identitätswert angeben, um ein Profil zu durchsuchen. |
 
 **Fehlerkorrekturen**
 
@@ -119,11 +119,11 @@ Adobe Experience Platform ermöglicht die Bereitstellung koordinierter, konsiste
 
 - Keine.
 
-Weitere Informationen [!DNL Real-time Customer Profile]einschließlich Übungen und Best Practices für die Arbeit mit [!DNL Profile] Daten finden Sie in der Übersicht über das [Echtzeit-Kundenerlebnis](../../profile/home.md).
+Weitere Informationen zu [!DNL Real-time Customer Profile], einschließlich Übungen und Best Practices für die Arbeit mit [!DNL Profile]-Daten, finden Sie im [Überblick über das Echtzeit-Profil des Kunden](../../profile/home.md).
 
 ## Quellen {#sources}
 
-Adobe Experience Platform can ingest data from external sources while allowing you to structure, label, and enhance that data using [!DNL Platform] services. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
+Adobe Experience Platform kann Daten aus externen Quellen erfassen, während Sie diese Daten mithilfe der [!DNL Platform]-Dienste strukturieren, beschriften und erweitern können. Daten können aus verschiedenen Quellen erfasst werden, z. B. aus Adobe-Anwendungen, Cloud-basiertem Speicher, Software von Drittanbietern und Ihrem CRM-System.
 
 [!DNL Experience Platform]Im Rahmen von stehen eine RESTful-API und interaktive Benutzeroberfläche zur Verfügung, mit deren Hilfe Sie auf unkomplizierte Weise Verbindungen zu Datenquellen verschiedener Anbieter einrichten können. Mit diesen Quellverbindungen können Sie sich authentifizieren und eine Verbindung zu externen Datenspeichern und CRM-Diensten herstellen, Zeiten für Erfassungsläufe festlegen und den Durchsatz der Datenerfassung verwalten.
 
@@ -133,7 +133,7 @@ Adobe Experience Platform can ingest data from external sources while allowing y
 | ------- | ----------- |
 | Zusätzliche API- und UI-Unterstützung für Cloud-Datenspeicherung | Neue Quell-Connectoren für [!DNL Azure File Storage]. |
 | Zusätzliche API- und UI-Unterstützung für Datenbanken | Neue Quellschnittstellen für [!DNL Azure Data Explorer], IBM DB2 und [!DNL Oracle DB]. |
-| Adobe Audience Manager für die [!DNL Experience Platform] Datenfreigabe | Der Bereitstellungsprozess für den [!DNL Audience Manager] Connector wurde aktualisiert. [!DNL Audience Manager] Datensätze für [!DNL Real-time Customer Profile] sind jetzt standardmäßig deaktiviert. Sie können manuell festlegen, für welche Datensätze Werbung gemacht werden soll [!DNL Profile]. Die neuen Standardeinstellungen sind nicht rückwirkend und wirken sich nur auf die Bereitstellung neuer [!DNL Audience Manager] Connectors aus. Weitere Informationen finden Sie im [Benutzerhandbuch](../../catalog/datasets/user-guide.md)für Datasets. |
+| Datenfreigabe für Adobe Audience Manager bis [!DNL Experience Platform] | Der Bereitstellungsprozess für den [!DNL Audience Manager] Connector wurde aktualisiert. [!DNL Audience Manager] Datensätze für  [!DNL Real-time Customer Profile] sind jetzt standardmäßig deaktiviert. Sie können manuell festlegen, welche Datensätze für [!DNL Profile] hochgeladen werden sollen. Die neuen Standardeinstellungen sind nicht rückwirkend und wirken sich nur auf die Bereitstellung neuer [!DNL Audience Manager]-Connectors aus. Weitere Informationen finden Sie im Benutzerhandbuch [Datensätze](../../catalog/datasets/user-guide.md). |
 
 **Bekannte Probleme**
 
